--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -406,16 +406,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='imported-documents'>Imported documents</h2><h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="http://www.chichester.gov.uk" class="govuk-link">Chichester District Council</a></li>
-      <li><a href="http://www.calderdale.gov.uk" class="govuk-link">Calderdale Metropolitan Borough Council</a></li>
-      <li><a href="http://www.pembrokeshire.gov.uk" class="govuk-link">Pembrokeshire County Council</a></li>
-      <li><a href="http://www.darlington.gov.uk" class="govuk-link">Darlington Borough Council</a></li>
-      <li><a href="http://www.birmingham.gov.uk" class="govuk-link">Birmingham City Council</a></li>
-      <li><a href="http://www.highpeak.gov.uk" class="govuk-link">High Peak Borough Council</a></li>
-      <li><a href="http://www.gravesham.gov.uk" class="govuk-link">Gravesham Borough Council</a></li>
       <li><a href="http://www.inverclyde.gov.uk" class="govuk-link">Inverclyde Council</a></li>
       <li><a href="http://www.broadland.gov.uk" class="govuk-link">Broadland District Council</a></li>
-      <li><a href="http://www.ballymena.gov.uk/" class="govuk-link">Ballymena Borough Council</a></li>
+      <li><a href="http://www.banbridge.com/" class="govuk-link">Banbridge District Council</a></li>
+      <li><a href="http://www.hants.gov.uk" class="govuk-link">Hampshire County Council</a></li>
+      <li><a href="http://www.islington.gov.uk/" class="govuk-link">London Borough of Islington Council</a></li>
+      <li><a href="http://www.oldham.gov.uk/" class="govuk-link">Oldham Metropolitan Borough Council</a></li>
+      <li><a href="http://www.iwight.com" class="govuk-link">Isle of Wight Council</a></li>
+      <li><a href="https://gov.wales/covid-19-alert-levels" class="govuk-link">Coronavirus (COVID-19) alert levels in Wales - GOV.WALES</a></li>
+      <li><a href="http://www.preston.gov.uk" class="govuk-link">Preston City Council</a></li>
+      <li><a href="http://www.richmondshire.gov.uk" class="govuk-link">Richmondshire District Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
