--- a/document-types/external_content.html
+++ b/document-types/external_content.html
@@ -359,16 +359,16 @@ actually any pages with this document type.</p>
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.ukhttp//www.chichester.gov.uk">Chichester District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.calderdale.gov.uk">Calderdale Metropolitan Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.pembrokeshire.gov.uk">Pembrokeshire County Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.darlington.gov.uk">Darlington Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.birmingham.gov.uk">Birmingham City Council</a></li>
 <li><a href="https://www.gov.ukhttp//www.highpeak.gov.uk">High Peak Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.gravesham.gov.uk">Gravesham Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.inverclyde.gov.uk">Inverclyde Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.broadland.gov.uk">Broadland District Council</a></li>
 <li><a href="https://www.gov.ukhttp//www.ballymena.gov.uk/">Ballymena Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.dundeecity.gov.uk">Dundee City Council</a></li>
+<li><a href="https://www.gov.ukhttps//nationalcareersservice.direct.gov.uk/advice/getajob/cvs/">Write your CV - National Careers Service</a></li>
+<li><a href="https://www.gov.ukhttp//www.staffsmoorlands.gov.uk">Staffordshire Moorlands District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.powys.gov.uk">Powys County Council</a></li>
+<li><a href="https://www.gov.ukhttps//www.moneyadviceservice.org.uk/en/categories/managing-debt">Debt management - Money Advice Service</a></li>
+<li><a href="https://www.gov.ukhttp//www.birmingham.gov.uk">Birmingham City Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.lancashire.gov.uk/">Lancashire County Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.iwight.com">Isle of Wight Council</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=external_content&amp;count=10">Source query from Search API</a></p>
 
