--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/need-consular-services-book-it-online--2">Need Consular services? Book it online</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/chevening-applications-top-tips">Chevening Applications: Top Tips</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/229283.es">El Reino Unido ratifica el Tratado sobre el comercio de armas</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-statement--3">Turks and Caicos post Cabinet Statement</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/171845.es-419">G8: Oportunidades para todos, incluyendo Guatemala</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/263630.pt">Dia Mundial contra a Pena de Morte - Declaração Conjunta</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/changes-to-the-uk-visa-application-process-in-czech-republic--2">Changes to the UK Visa Application Process in Czech Republic</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/climate-change-energy-and-programme-team-in-mexico-city--2">Climate Change, Energy and Programme Team in Mexico City</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/248692.ko">주한영국대사관, 한국인 20 여명에게 영국 정부 쉐브닝 장학금 전달</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/tci-post-cabinet-statement--2">Turks and Caicos Islands post Cabinet statement</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/215466.es">&ldquo;España es una de las naciones europeas líderes en el ámbito científico&hellip;por lo que es muy importante para nosotros&rdquo;</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/national-strategy-for-maritime-security">National Strategy for Maritime Security</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/206678.es-419">Arranca la GREAT week en México</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/human-rights-council-17th-session-of-the-universal-periodic-review-working-group-geneva-21-october-to-1-november-2013--2">Human Rights Council: 17th Session of the Universal Periodic Review Working Group, Geneva, 21 October to 1 November 2013</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/214930.pt">UKTI promove competição de Tecnologia e Inovação no Brasil</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/252606.zh-tw">Chevening 英國政府獎學金開放申請</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-ambassador-discusses-green-economy-with-uzbek-students--2">British Ambassador discusses green economy with Uzbek students</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/294447.pt">Inovações Britânicas na área da saúde na Hospitalar 2015</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/the-human-rights-and-democracy-fund-bid-round-2014-2015--2">The Human Rights and Democracy Fund - Bid Round 2014-2015</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-mumbai--7">Advice for British nationals in Mumbai</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
